--- a/partials/header.html
+++ b/partials/header.html
@@ -28,9 +28,9 @@
         </button>
         <h2 class="banner-title">Live your best life.</h2>
         <div class="keywords flex">
-            <div class="stat-item"><span>10x</span> power</div>
-            <div class="stat-item"><span>9</span> ingredients</div>
-            <div class="stat-item"><span>20k+</span> happy customers</div>
+            <div class="header-stat-item"><span>10x</span> power</div>
+            <div class="header-stat-item"><span>9</span> ingredients</div>
+            <div class="header-stat-item"><span>20k+</span> happy customers</div>
         </div>
         <button class="btn btn-primary btn-md">Shop Now</button>
     </div>
