--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer">
+<div class="site-footer">
     <div class="footer-brand">GTG</div>
 
     <div class="footer-container">
@@ -58,4 +58,4 @@
             </p>
         </div>
     </div>
-</footer>
+</div>
