--- a/partials/table.html
+++ b/partials/table.html
@@ -8,26 +8,26 @@
 		<table class="comparison-table" role="table">
 			<thead>
 				<tr>
-					<th class="comparison-qualities-header">Qualities</th>
-					<th class="comparison-brand comparison-brand-gtg comparison-cell-gtg-first">
+					<th class="comparison-cell comparison-cell-head comparison-align-left">Qualities</th>
+					<th class="comparison-cell comparison-cell-head comparison-highlight comparison-highlight-top">
 						<div class="comparison-brand-img">
 							<img src="../assets/images/gtg-bottle.png" alt="GTG bottle" loading="lazy" />
 						</div>
 						<span class="comparison-brand-name">GTG</span>
 					</th>
-					<th class="comparison-brand">
+					<th class="comparison-cell comparison-cell-head">
 						<div class="comparison-brand-img">
 							<img src="../assets/images/preview_1.png" alt="Arose bottle" loading="lazy" />
 						</div>
 						<span class="comparison-brand-name">Arose</span>
 					</th>
-					<th class="comparison-brand">
+					<th class="comparison-cell comparison-cell-head">
 						<div class="comparison-brand-img">
 							<img src="../assets/images/preview_3.png" alt="Bella bottle" loading="lazy" />
 						</div>
 						<span class="comparison-brand-name">Bella</span>
 					</th>
-					<th class="comparison-brand">
+					<th class="comparison-cell comparison-cell-head">
 						<div class="comparison-brand-img">
 							<img src="../assets/images/preview_4.png" alt="Daisies bottle" loading="lazy" />
 						</div>
@@ -37,57 +37,57 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td class="comparison-quality">Potency Concentration</td>
-					<td class="comparison-cell comparison-cell-gtg">10x</td>
+					<td class="comparison-cell comparison-align-left">Potency Concentration</td>
+					<td class="comparison-cell comparison-highlight">10x</td>
 					<td class="comparison-cell">1x</td>
 					<td class="comparison-cell">1x</td>
 					<td class="comparison-cell">10x</td>
 				</tr>
 				<tr>
-					<td class="comparison-quality">Longevity</td>
-					<td class="comparison-cell comparison-cell-gtg"><span class="comparison-icon comparison-icon-check" aria-label="Yes"></span></td>
+					<td class="comparison-cell comparison-align-left">Longevity</td>
+					<td class="comparison-cell comparison-highlight"><span class="comparison-icon comparison-icon-check" aria-label="Yes"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-check-outline" aria-label="Yes"></span></td>
 				</tr>
 				<tr>
-					<td class="comparison-quality">Sillage</td>
-					<td class="comparison-cell comparison-cell-gtg"><span class="comparison-icon comparison-icon-check" aria-label="Yes"></span></td>
+					<td class="comparison-cell comparison-align-left">Sillage</td>
+					<td class="comparison-cell comparison-highlight"><span class="comparison-icon comparison-icon-check" aria-label="Yes"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
 				</tr>
 				<tr>
-					<td class="comparison-quality">Bottle Design Score</td>
-					<td class="comparison-cell comparison-cell-gtg">9</td>
+					<td class="comparison-cell comparison-align-left">Bottle Design Score</td>
+					<td class="comparison-cell comparison-highlight">9</td>
 					<td class="comparison-cell">5</td>
 					<td class="comparison-cell">6</td>
 					<td class="comparison-cell">2</td>
 				</tr>
 				<tr>
-					<td class="comparison-quality">Blend and Harmony</td>
-					<td class="comparison-cell comparison-cell-gtg"><span class="comparison-icon comparison-icon-check" aria-label="Yes"></span></td>
+					<td class="comparison-cell comparison-align-left">Blend and Harmony</td>
+					<td class="comparison-cell comparison-highlight"><span class="comparison-icon comparison-icon-check" aria-label="Yes"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
 				</tr>
 				<tr>
-					<td class="comparison-quality">Skin Compatibility</td>
-					<td class="comparison-cell comparison-cell-gtg"><span class="comparison-icon comparison-icon-check" aria-label="Yes"></span></td>
+					<td class="comparison-cell comparison-align-left">Skin Compatibility</td>
+					<td class="comparison-cell comparison-highlight"><span class="comparison-icon comparison-icon-check" aria-label="Yes"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
 				</tr>
 				<tr>
-					<td class="comparison-quality">Scent Profile</td>
-					<td class="comparison-cell comparison-cell-gtg"><span class="comparison-icon comparison-icon-check" aria-label="Yes"></span></td>
+					<td class="comparison-cell comparison-align-left">Scent Profile</td>
+					<td class="comparison-cell comparison-highlight"><span class="comparison-icon comparison-icon-check" aria-label="Yes"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-check-outline" aria-label="Yes"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
 				</tr>
 				<tr>
-					<td class="comparison-quality">Price vs. Quality</td>
-					<td class="comparison-cell comparison-cell-gtg comparison-cell-gtg-last"><span class="comparison-icon comparison-icon-check" aria-label="Yes"></span></td>
+					<td class="comparison-cell comparison-align-left">Price vs. Quality</td>
+					<td class="comparison-cell comparison-highlight comparison-highlight-bottom"><span class="comparison-icon comparison-icon-check" aria-label="Yes"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-check-outline" aria-label="Yes"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-cross" aria-label="No"></span></td>
 					<td class="comparison-cell"><span class="comparison-icon comparison-icon-check-outline" aria-label="Yes"></span></td>
@@ -95,7 +95,7 @@
 			</tbody>
 		</table>
 	</div>
-	<div class="comparison-cta-wrapper">
+	<div class="comparison-cta">
 		<button class="btn btn-primary btn-lg" type="button">Try It Risk-Free</button>
 	</div>
 </div>
