--- a/partials/product.html
+++ b/partials/product.html
@@ -57,8 +57,8 @@
                 <h3 class="purchase-title">Most Popular</h3>
 
                 <div id="subscription-single" class="subscription-option is-selected">
-                    <div class="subscription-header">
-                        <input type="radio" class="radio-input" id="single" name="subscription"
+                    <div class="subscription-header radio-primary">
+                        <input type="radio" class="radio-input radio-primary" id="single" name="subscription"
                             value="singleSubscription" checked>
                         <div class="header-content">
                             <label for="single" class="radio-label">Single Subscription</label>
@@ -72,9 +72,9 @@
                     <div class="subscription-body">
                         <div class="fragrance">
                             <h5 class="fragrance-title">Choose a Fragrance</h5>
-                            <div class="fragrance-container">
+                            <div class="fragrance-container radio-secondary">
                                 <div class="original best-seller-img">
-                                    <div class="flex gap-6">
+                                    <div class="flex flex-center gap-6">
                                         <input type="radio" id="frag-single-original" name="fragrance_single" value="original" checked>
                                         <label for="frag-single-original" class="label">Original</label>
                                     </div>
@@ -84,7 +84,7 @@
                                     <div class="best-seller">BEST-SELLER</div>
                                 </div>
                                 <div class="lily">
-                                    <div class="flex gap-6">
+                                    <div class="flex flex-center gap-6">
                                         <input type="radio" id="frag-single-lily" name="fragrance_single" value="lily">
                                         <label for="frag-single-lily" class="label">Lily</label>
                                     </div>
@@ -93,7 +93,7 @@
                                     </div>
                                 </div>
                                 <div class="rose">
-                                    <div class="flex gap-6">
+                                    <div class="flex flex-center gap-6">
                                         <input type="radio" id="frag-single-rose" name="fragrance_single" value="rose">
                                         <label for="frag-single-rose" class="label">Rose</label>
                                     </div>
@@ -146,7 +146,7 @@
             </div>
 
             <div id="subscription-double" class="subscription-option">
-                <div class="subscription-header">
+                <div class="subscription-header radio-primary">
                     <input type="radio" class="radio-input" id="double" name="subscription" value="doubleSubscription">
                     <div class="header-content">
                         <label for="double" class="radio-label">Double Subscription</label>
@@ -158,11 +158,11 @@
                 </div>
 
                 <div class="subscription-body">
-                    <div class="fragrance">
+                    <div class="fragrance radio-secondary">
                         <h5 class="fragrance-title">Choose a Fragrance 1</h5>
                         <div class="fragrance-container">
                             <div class="original best-seller-img">
-                                <div class="flex gap-6">
+                                <div class="flex flex-center gap-6">
                                     <input type="radio" id="frag-double-1-original" name="fragrance_double_1" value="original" checked>
                                     <label for="frag-double-1-original" class="label">Original</label>
                                 </div>
@@ -172,7 +172,7 @@
                                 <div class="best-seller">BEST-SELLER</div>
                             </div>
                             <div class="lily">
-                                <div class="flex gap-6">
+                                <div class="flex flex-center gap-6">
                                     <input type="radio" id="frag-double-1-lily" name="fragrance_double_1" value="lily">
                                     <label for="frag-double-1-lily" class="label">Lily</label>
                                 </div>
@@ -181,7 +181,7 @@
                                 </div>
                             </div>
                             <div class="rose">
-                                <div class="flex gap-6">
+                                <div class="flex flex-center gap-6">
                                     <input type="radio" id="frag-double-1-rose" name="fragrance_double_1" value="rose">
                                     <label for="frag-double-1-rose" class="label">Rose</label>
                                 </div>
@@ -192,11 +192,11 @@
                         </div>
                     </div>
 
-                    <div class="fragrance fragrance-2">
+                    <div class="fragrance fragrance-2 radio-secondary">
                         <h5 class="fragrance-title">Choose a Fragrance 2</h5>
                         <div class="fragrance-container">
                             <div class="original best-seller-img">
-                                <div class="flex gap-6">
+                                <div class="flex flex-center gap-6">
                                     <input type="radio" id="frag-double-2-original" name="fragrance_double_2" value="original" checked>
                                     <label for="frag-double-2-original" class="label">Original</label>
                                 </div>
@@ -206,7 +206,7 @@
                                 <div class="best-seller">BEST-SELLER</div>
                             </div>
                             <div class="lily">
-                                <div class="flex gap-6">
+                                <div class="flex flex-center gap-6">
                                     <input type="radio" id="frag-double-2-lily" name="fragrance_double_2" value="lily">
                                     <label for="frag-double-2-lily" class="label">Lily</label>
                                 </div>
@@ -215,7 +215,7 @@
                                 </div>
                             </div>
                             <div class="rose">
-                                <div class="flex gap-6">
+                                <div class="flex flex-center gap-6">
                                     <input type="radio" id="frag-double-2-rose" name="fragrance_double_2" value="rose">
                                     <label for="frag-double-2-rose" class="label">Rose</label>
                                 </div>
