Header + Banner section

--- a/partials/header.html
+++ b/partials/header.html
@@ -1,6 +1,16 @@
 <div class="banner">
     <div class="header-container flex flex-space-between flex-center">
-        <h1 class="brand-name">GTG</h1>
+        <div class="flex flex-center gap-12">
+            <!-- Hamburger Menu Button -->
+            <button class="hamburger-menu" aria-label="Toggle Menu">
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
+            </button>
+
+            <h1 class="brand-name">GTG</h1>
+        </div>
+
         <nav class="desktop-nav">
             <ul class="flex navbar">
                 <li class="nav-item"><a href="#" class="nav-link active">Home</a></li>
@@ -15,7 +25,7 @@
                 <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
             </ul>
         </nav>
-        <div class="flex flex-center gap-12">
+        <div class="flex flex-center gap-12 header-actions">
             <img src="../assets/images/icons/search.svg" alt="Search" class="search-icon">
             <button class="btn btn-primary btn-md">Shop Now</button>
         </div>
