--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,61 +1,62 @@
 <div class="site-footer">
-    <div class="footer-brand">GTG</div>
-
     <div class="footer-container">
-        <div class="footer-left">
+        <div class="footer-brand">GTG</div>
+        <div class="footer-content">
+            <div class="footer-left">
 
-            <div class="footer-links">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Shop</a></li>
-                    <li><a href="#">Fragrances</a></li>
-                </ul>
+                <div class="footer-links">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Shop</a></li>
+                        <li><a href="#">Fragrances</a></li>
+                    </ul>
 
-                <ul>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
+                    <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
 
-                <ul class="social-links">
-                    <li>
-                        <a href="#" aria-label="Facebook">
-                            <img src="../assets/images/icons/facebook.svg" alt="facebook" class="icon" />
-                            <span>Facebook</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" aria-label="Instagram">
-                            <img src="../assets/images/icons/instagram.svg" alt="instagram" class="icon" />
-                            <span>Instagram</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" aria-label="X">
-                            <img src="../assets/images/icons/x.svg" alt="X" class="icon" />
-                            <span>X</span>
-                        </a>
-                    </li>
-                </ul>
+                    <ul class="social-links">
+                        <li>
+                            <a href="#" aria-label="Facebook">
+                                <img src="../assets/images/icons/facebook.svg" alt="facebook" class="icon" />
+                                <span>Facebook</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" aria-label="Instagram">
+                                <img src="../assets/images/icons/instagram.svg" alt="instagram" class="icon" />
+                                <span>Instagram</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" aria-label="X">
+                                <img src="../assets/images/icons/x.svg" alt="X" class="icon" />
+                                <span>X</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
 
-        <!-- Newsletter -->
-        <div class="footer-right">
-            <h3 class="newsletter-title">
-                Join our newsletter to stay up to date on features and releases.
-            </h3>
+            <!-- Newsletter -->
+            <div class="footer-right">
+                <h3 class="newsletter-title">
+                    Join our newsletter to stay up to date on features and releases.
+                </h3>
 
-            <form class="newsletter-form">
-                <input type="email" placeholder="Enter your email" aria-label="Email address" required />
-                <button type="submit" class="btn btn-accent btn-md">Subscribe</button>
-            </form>
+                <form class="newsletter-form">
+                    <input type="email" placeholder="Enter your email" aria-label="Email address" required />
+                    <button type="submit" class="btn btn-accent btn-md">Subscribe</button>
+                </form>
 
-            <p class="newsletter-note">
-                By subscribing you agree to with our
-                <a href="#">Privacy Policy</a> and provide consent to receive
-                updates from our company.
-            </p>
+                <p class="newsletter-note">
+                    By subscribing you agree to with our
+                    <a href="#">Privacy Policy</a> and provide consent to receive
+                    updates from our company.
+                </p>
+            </div>
         </div>
     </div>
 </div>
