--- a/css/layout.css
+++ b/css/layout.css
@@ -114,9 +114,9 @@
 
 .product-container {
     margin-top: 9.125rem;
-    padding: 0 4rem;
+    /* padding: 0 4rem; */
     display: flex;
-    justify-content: space-between
+    justify-content: space-evenly;
 }
 
 .product-gallery {
@@ -477,10 +477,10 @@
 
 .collection-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     margin-top: 145px;
-    padding: 0 64px;
+    /* padding: 0 64px; */
 }
 
 /* LEFT */
@@ -558,11 +558,11 @@
 
 .stats-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     margin-top: 100px;
     background: var(--gradient-bg);
-    padding: 56px 170px;
+    padding: 56px 0px;
 }
 
 .stat-item {
@@ -598,7 +598,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: 4.375rem;
-    padding: 0 4rem;
+    /* padding: 0 4rem; */
 }
 
 .comparison {
@@ -736,26 +736,30 @@ td.comparison-align-left {
 .site-footer {
     background-color: var(--color-primary);
     color: var(--color-white);
-    padding: 64px 64px;
+    padding: 64px 0px;
     margin-top: 105px;
 
     .footer-container {
         display: flex;
-        align-items: center;
-        justify-content: space-between;
+        flex-direction: column;
         gap: 64px;
         max-width: 100%;
     }
 
     /* Left section */
     .footer-left {
-        flex: 1;
+        /* flex: 1; */
     }
 
     .footer-brand {
         font-weight: 700;
         font-size: 42px;
         margin-bottom: 40px;
+    }
+
+    .footer-content {
+        display: flex;
+        justify-content: space-evenly;
     }
 
     .footer-links {
